// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avoid hanging on loops 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
}
`;

exports[`can handle input from multiple origins 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n3": {
    "input": {
      "data1": "Hello {{World}}",
      "data2": "Hello {{World}}",
    },
  },
}
`;

exports[`can resolve variables correctly 1`] = `
{
  "n1": {
    "input": {
      "data": "\${{ps:ref:file:MY_FILE}} {{keep}}",
    },
    "status": "idle",
  },
  "n2": {
    "input": {
      "data": "INSERTED_FILE {{keep}}",
    },
  },
}
`;

exports[`correctly map output from one node onto another 1`] = `
{
  "n1": {
    "input": {
      "data": "test data",
    },
  },
  "n2": {
    "input": {
      "data1": "test data",
      "data2": "",
    },
  },
  "n3": {
    "input": {
      "data": "test data",
    },
  },
}
`;

exports[`ignore autorun=false flag on root node 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
}
`;

exports[`ignore inputs from nested unreachable nodes 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n4": {
    "input": {
      "data1": "Hello {{World}}",
      "data2": "",
    },
  },
  "n5": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
}
`;

exports[`ignore inputs from unreachable nodes 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n3": {
    "input": {
      "data1": "Hello {{World}}",
      "data2": "",
    },
  },
  "n4": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
}
`;

exports[`merge existing state on input 1`] = `
{
  "n1": {
    "input": {
      "data1": "IS_OVERWRITTEN",
      "data2": "KEEP",
    },
    "status": "idle",
  },
}
`;

exports[`nodes with autorun=false down the chain do not update the inputs of their targets 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
}
`;

exports[`only run a node once all inputs are resolved 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n3": {
    "input": {
      "data1": "Hello {{World}}",
      "data2": "Hello {{World}}",
    },
  },
  "n4": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
}
`;

exports[`run a single node chain 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello World",
    },
    "status": "idle",
  },
}
`;

exports[`running a node updates the input of its children 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
  "n2": {
    "input": {
      "data": "Hello {{World}}",
    },
  },
}
`;

exports[`should throw error if the node is undefined 1`] = `[Error: Definition for node not_a_node not found]`;

exports[`update array variables 1`] = `
{
  "n2": {
    "input": {
      "data": "",
      "variables": [
        {
          "defaultValue": "test1",
          "description": "",
          "id": "world",
          "name": "world",
          "type": "text",
        },
        {
          "defaultValue": "test2",
          "description": "",
          "id": "hello",
          "name": "hello",
          "type": "text",
        },
      ],
    },
  },
}
`;
